Fixing spacing

--- a/app/assets/stylesheets/new.css.scss
+++ b/app/assets/stylesheets/new.css.scss
@@ -206,7 +206,7 @@ p {
     padding: 20px 10px 45px;
 
     hr {
-      margin: 20px 30px;
+      margin: 30px 30px;
       width: 90%;
     }
   }
@@ -220,11 +220,4 @@ p {
   height: 300px;
   width: 480px;
   margin: 15px auto 0;
-}
-
-.mapTitle {
-  margin-top: 20px;
-  &:first-child {
-    margin-top: 0;
-  }
 }
